<resources>
    <string name="app_name">Marvel News</string>

    <!-- String for having no news -->
    <string name="no_news">No news found. Try again later.</string>

    <!-- Sting for having no internet connection -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>

    <!-- Strings For Minimum Date Preference [CHAR LIMIT=30] -->
    <string name="settings_min_date_label">From Date</string>
    <string name="settings_min_date_key" translatable="false">from_date</string>
    <string name="settings_min_date_default" translatable="false">2010-01-01</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <!-- Label for order-by newest to oldest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_publicationdate_newest_label">Fresh News</string>
    <string name="settings_order_by_publicationdate_newest_value" translatable="false">newest</string>

    <!-- Label for order-by oldest to newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_publicationdate_oldest_label">Older News</string>
    <string name="settings_order_by_publicationdate_oldest_value" translatable="false">oldest</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

</resources>
